# control

./: CMakeLists.txt  package.xml  setup.py
cfg/: GeometricControl.cfg  JoystickDepthStabilizer.cfg  PidControl.cfg  PidJoystickControl.cfg  Twister.cfg
config/: CarrotControl.cfg  PidControl.cfg  depth_control_hippo_default.yaml  depth_control_simulation_bluerov_default.yaml  depth_control_simulation_default.yaml  depth_control_simulation_hippo_default.yaml  depth_ekf_default.yaml  depth_ekf_params.yaml  distance_control_default.yaml  mixer_bluerov_default.yaml  mixer_hippocampus_default.yaml
launch/: actuator_mixer_node.launch  attitude_control.launch  attitude_mixer_node.launch  depth_control_node.launch  depth_estimator.launch  distance_control_node.launch  follow_vehicle.launch  geom_att_ctrl_node.launch  inc_follow_vehicle.launch  inc_joystick_base.launch  inc_joystick_control.launch  inc_path_tracking.launch  joystick_control.launch  node_attitude_mixer.launch  node_depth_control_bluerov.launch  node_depth_control_hippo.launch  node_depth_estimator.launch  node_path_follower.launch  node_surfacing.launch  node_twister.launch  path_follower_node.launch  path_tracking.launch  top_depth_estimator.launch  top_joystick_control_bluerov.launch  top_joystick_control_hippo.launch  top_path_tracking_demo_hippo.launch
nodes/: actuator_mixer_node  attitude_mixer_node  depth_control.py  depth_control_bluerov_node  depth_control_node  depth_control_node.py  depth_estimator_node  distance_control_node  geom_att_ctrl_node  joystick_arm_manager_node  joystick_bluerov_depth_stabilizer_node  joystick_bluerov_node  joystick_control_node  joystick_hippo_node  joystick_mapper_node  joystick_node  path_follower_node  surfacing_node  twister_node
src/control/: carrot_control.py  geometric_attitude_control.py  pid.py
